<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new"
        android:orderInCategory="100"
        android:title="@string/action_new"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_login"
        android:orderInCategory="300"
        android:title="@string/action_login"
        android:icon="@android:drawable/ic_menu_more"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="ifRoom" />
</menu>