<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    tools:context="com.example.nainjanewswatch.CreateAccount"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mobilecbtexam.CreateAccount"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/profile_pic"
            android:src="@mipmap/ic_passport"
            android:contentDescription="ProfilePics"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/browse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="@android:color/black"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullname"
        android:textSize="20sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/first_name_other_name"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:lines="1"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:hint="@string/enter_email_address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="phone"
        android:maxLines="1"
        android:lines="1"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:maxLength="13"
        android:hint="@string/enter_phone_number" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="State :"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="14dp"
            android:textColor="@android:color/black"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_phone_number"
            android:textColor="@android:color/black"

            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender :"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:id="@+id/male"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:id="@+id/female"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/permAdd"
        android:textStyle="bold"
        android:textSize="20sp"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:lines="3"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:hint="@string/enter_permanent_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="1"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:inputType="textPassword"
            android:drawableLeft="@android:drawable/ic_menu_view"
            android:drawablePadding="8dp"
            android:hint="@string/choose_password"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/retypepassword"
        android:textStyle="bold"
        android:textSize="20sp"
        android:maxLines="1"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:drawableLeft="@android:drawable/ic_menu_view"
        android:drawablePadding="8dp"
        android:hint="@string/re_enter_password"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="New Text"
        android:id="@+id/status"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:scrollbars="vertical"
        android:gravity="center"
        android:layout_weight="0.05"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_record"
        android:id="@+id/btnSave"
        android:textStyle="bold"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/coloryellow"/>
</LinearLayout>
</android.support.v4.widget.NestedScrollView>