<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    tools:context="com.example.nainjanewswatch.HomeScreen"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.example.nainjanewswatch.HomeScreen"
        >
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="6dp"
        android:textSize="25sp"
        android:padding="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@android:color/darker_gray"
        android:text="WELCOME TO NAINJA NEWS WATCH" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_new"
            android:typeface="sans"
            android:id="@+id/txtNew"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_add"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:drawablePadding="2dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:typeface="sans"
            android:id="@+id/txtLogin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_more"
            android:drawablePadding="8dp"
            android:drawableLeft="@android:drawable/ic_menu_more"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_exit"
            android:typeface="sans"
            android:id="@+id/txtExit"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_light"
            android:padding="10dp"
            android:textAlignment="center"
            android:drawableRight="@android:drawable/ic_menu_close_clear_cancel"
            android:drawablePadding="8dp"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
